i did not change anything

--- a/R/last_round.nb.html
+++ b/R/last_round.nb.html
@@ -1765,6 +1765,9 @@ while (loop_status) { # while-loop is repeated as long as loop_status is true
 }
 print(sum)</code></pre>
 <!-- rnb-source-end -->
+<!-- rnb-output-begin eyJkYXRhIjoiWzFdIDUwNTBcbiJ9 -->
+<pre><code>[1] 5050</code></pre>
+<!-- rnb-output-end -->
 <!-- rnb-chunk-end -->
 <!-- rnb-text-begin -->
 <!-- rnb-text-end -->
